# test

./: CMakeLists.txt  a.out  test.c  test.ll  test.ll]  test.peko  test.txt
llvm-12/include/: llvm  llvm-c
llvm-12/lib/: libLTO.so.12  libRemarks.so.12  libclang-12.so.1  libclang.so.1  liblldb.so.1  liblldbIntelFeatures.so.12  libomp.so.5  libomptarget.so.12
llvm-12/lib/cmake/clang/: ClangConfig.cmake  ClangTargets-relwithdebinfo.cmake  ClangTargets.cmake
llvm-12/lib/cmake/llvm/: LLVMConfig.cmake  LLVMExports-relwithdebinfo.cmake  LLVMExports.cmake
llvm-12/lib/cmake/polly/: PollyConfig.cmake
llvm-12/lib/python3/dist-packages/lldb/: libLLVM-12.0.1.so.1
pekodir/stdlib/: stdlib.c
src/: main.cxx
src/include/: CLIEngine.h  LexingEngine.h  ParsingEngine.h  asts.h
tests/: embed_loop.peko  func.peko  global_var.peko  if_statement.peko
